<resources>
    <string name="app_name">Pokegama</string>
    <string name="title_home">Home</string>

    <string name="title_add">Add</string>
    <string name="title_about">About Us</string>
    <string name="title_facilities">Facilities</string>

    <!--Home-->
    <string name="home_title">Pokegama</string>
    <string name="home_subtitle">Gadjah Mada in your pocket</string>
    <string name="home_facilities_title">Fasilitas UGM</string>

    <!--Facilities-->
    <string name="facilities_title">Fasilitas</string>
    <string name="facilities_locations_title">Daftar Lokasi</string>

    <!--Add-->
    <string name="addfacility_title">Tambah Fasilitas</string>
    <string name="addfacility_description">
        Tambah Fasilitas apabila terdapat Toyagama,
        Bus UGM, ataupun Sepeda Kampus yang belum terdapat di aplikasi.
        Masukan akan diverifikasi admin.
    </string>
    <string name="addfacility_title_facility">Fasilitas</string>
    <string name="addfacility_facility_hint">Pilih jenis fasilitas</string>"
    <string-array name="facility_list">
        <item>Toyagama</item>
        <item>Bus UGM Stop</item>
        <item>Sepeda Kampus</item>
    </string-array>
    <string name="addfacility_title_name">Nama Tempat </string>
    <string name="addfacility_name_hint">Contoh: DTETI</string>
    <string name="addfacility_title_faculty">Fakultas </string>
    <string name="addfacility_faculty_hint">Pilih fakultas</string>
    <string-array name="faculty_list">
        <item>FKT</item>
        <item>FK</item>
        <item>FA</item>
        <item>FKH</item>
        <item>FKG</item>
        <item>SP</item>
        <item>FIB</item>
        <item>FH</item>
        <item>BIO</item>
        <item>PA</item>
        <item>PET</item>
        <item>FPT</item>
        <item>PSI</item>
        <item>FT</item>
        <item>FTP</item>
        <item>GEO</item>
        <item>FIL</item>
        <item>FEB</item>
        <item>PAU</item>
        <item>SV</item>
        <item>LAIN-LAIN</item>
    </string-array>
    <string name="addfacility_title_location">Lokasi </string>
    <string name="addfacility_title_facilityphoto">Foto Fasilitas (untuk Verifikasi)</string>
    <string name="addfacility_facilityphoto_hint">Upload Gambar (JPG, PNG)</string>"
    <string name="addfacility_title_description">Deskripsi</string>
    <string name="addfacility_description_hint">Contoh : Depan masjid kampus</string>
    <string name="addfacility_upload">Upload</string>
    <string name="addfacility_submit">Ajukan permohonan Fasilitas</string>
    <string name="home_pokegama_icon">Pokegama Icon</string>
    <string name="home_toyagama_content_description">Toyagama</string>
    <string name="home_bus_ugm_content_description">Bus UGM</string>
    <string name="home_sepeda_kampus_content_description">Sepeda Kampus</string>
    <string name="about_app_title">About App</string>
    <string name="about_app_description">Pokegama, singkatan dari kata “Pocket Gadjah Mada”, merupakan aplikasi tracker fasilitas yang terdapat di Universitas Gadjah Mada dengan slogan “Gadjah Mada in your pocket”.</string>
    <string name="about_app_logo_description">Logo Pokegama merupakan sebuah monogram dari “UGM”, yang membentuk sebuah simbol menyerupai kantong yang membuka yang berisi pinpoint.</string>
    <string name="about_us_title">About Us</string>
    <string name="about_us_description">Aplikasi ini dibuat oleh Tim 01 Pengembangan Aplikasi Piranti Bergerak 2024, yaitu Daniel Anantadhirya Adyawisesa Linan, Deren Tanaphan, dan Rama Sulaiman Nurcahyo.</string>
    <string name="foto_nanta">foto nanta</string>
    <string name="foto_deren">foto deren</string>
    <string name="foto_rama">foto rama</string>
    <string name="contact_us">Kontak Kami</string>
    <string name="whatsapp">Whatsapp: +62-811-1458-3378</string>
    <string name="instagram">Instagram: @poketto.gama</string>
    <string name="twitter">X: @poketto.gama</string>

    <!--About-->

</resources>