<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pokegama.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_facilities"
            app:destination="@id/navigation_facilities" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.pokegama.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.example.pokegama.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/navigation_facilities"
        android:name="com.example.pokegama.ui.facilities.FacilitiesFragment"
        android:label="@string/title_facilities"
        tools:layout="@layout/fragment_facilities">
        <argument
            android:name="facility_type"
            app:argType="string" />
    </fragment>
</navigation>